# pcf-metadata-extractor

./: .gitignore  CHANGELOG.md  ISSUES.md  README.md  REFACTORING-ANALYSIS.md  extract-pcf-inventory.sh  pcfusage-v3.sh  pyproject.toml
.github/workflows/: python-validate.yml  shell-validation.yml
src/pcf_inventory_extractor/: app_extract.py  cf_client.py  cli.py  constants.py  inventory.py  org_extract.py  pagination.py  process_extract.py  run.py  sanitize.py  types.py  web.py
src/pcf_inventory_extractor/client/: __init__.py  http.py  pagination.py  uaa_auth.py
src/pcf_inventory_extractor/extraction/: __init__.py  app.py  org.py  pipeline.py  process.py
src/pcf_inventory_extractor/output/: __init__.py  csv.py
src/pcf_inventory_extractor/utils/: __init__.py  helpers.py
static/: app.css
templates/: help.html  index.html
tests/: test_sanitize.py  test_uaa_auth.py  test_web_extract.py
